--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "firebase": "^11.0.2",
     "gartic-next-fe": "file:",
     "jsonwebtoken": "^9.0.2",
